--- a/pom.xml
+++ b/pom.xml
@@ -259,11 +259,7 @@
     <module>log4j-plugins</module>
     <module>log4j-plugins-test</module>
     <module>log4j-script</module>
-    <module>log4j-slf4j2-impl</module>
-    <module>log4j-slf4j-impl</module>
     <module>log4j-spring-cloud-config-client</module>
-    <module>log4j-to-jul</module>
-    <module>log4j-to-slf4j</module>
 
   </modules>
 
@@ -530,13 +526,13 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-slf4j2-impl</artifactId>
-        <version>${project.version}</version>
+        <version>${log4j-api.version}</version>
       </dependency>
 
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-slf4j-impl</artifactId>
-        <version>${project.version}</version>
+        <version>${log4j-api.version}</version>
       </dependency>
 
       <dependency>
@@ -548,13 +544,13 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-to-jul</artifactId>
-        <version>${project.version}</version>
+        <version>${log4j-api.version}</version>
       </dependency>
 
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-to-slf4j</artifactId>
-        <version>${project.version}</version>
+        <version>${log4j-api.version}</version>
       </dependency>
 
       <dependency>
