--- a/src/site/resources/.htaccess
+++ b/src/site/resources/.htaccess
@@ -16,6 +16,11 @@
 # specific language governing permissions and limitations
 # under the License.
 #
+##
+# Custom 404 page
+ErrorDocument 404 "/log4j/2.x/404.html"
+
+# Rewrite rules
 RewriteEngine On
 RewriteBase "/log4j/2.x/"
 
