--- a/pom.xml
+++ b/pom.xml
@@ -357,6 +357,7 @@
     <!-- =====================================================
          Direct dependency version properties (in alphabetical order)
          ===================================================== -->
+    <jspecify.version>1.0.0</jspecify.version>
     <log4j-docgen.version>0.9.0</log4j-docgen.version>
     <node.version>21.7.1</node.version>
     <npm.version>10.5.0</npm.version>
@@ -993,6 +994,7 @@
           <groupId>org.jspecify</groupId>
           <artifactId>jspecify</artifactId>
           <version>${jspecify.version}</version>
+          <scope>test</scope>
         </dependency>
       </dependencies>
 
