--- a/pom.xml
+++ b/pom.xml
@@ -307,7 +307,7 @@
   <properties>
 
     <!-- project version -->
-    <revision>2.25.0.pr3105-SNAPSHOT</revision>
+    <revision>2.25.0-SNAPSHOT</revision>
     <!-- Versions used on the site: no snapshots! -->
     <site-log4j-api.version>2.24.3</site-log4j-api.version>
     <site-log4j-core.version>2.24.3</site-log4j-core.version>
