enabled github projects

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -38,6 +38,7 @@ github:
   features:
     issues: true
     discussions: true
+    projects: true
   del_branch_on_merge: true
   autolink_jira:
     - LOG4J2
