--- a/.asf.yaml
+++ b/.asf.yaml
@@ -31,12 +31,15 @@ notifications:
   pullrequests: notifications@logging.apache.org
   pullrequests_bot_dependabot: robots@logging.apache.org
   jira_options: link label worklog
+  discussions: dev@logging.apache.org
 
 github:
   description: "Apache Log4j is a versatile, feature-rich, efficient logging API and backend for Java."
   homepage: https://logging.apache.org/log4j/2.x
   features:
     issues: true
+    discussions: true
+    projects: true
   del_branch_on_merge: true
   autolink_jira:
     - LOG4J2
